# swlab

./: .gitignore  CMakeLists.txt  README.md  download_deps.sh  file_browser  index.html
.github/workflows/: deploy.yml
C0/A0/: week 1.html
C0/A0/A0_23CS10005_Q1/: A0_23CS10005_Q1a.c  A0_23CS10005_Q1b.c
C0/A0/week 1_files/: requirejs.php  showClock.js
C0/lab/: A0_23CS10005_Q2.c
C0/lab/A0_23CS10005_Q1/: A0_23CS10005_Q1b.c
docs/: index.html  style.css
docs/.github/: index.html
docs/.github/workflows/: index.html
docs/include/: index.html
docs/labs/: index.html
docs/labs/a1/: index.html
docs/labs/a1/A0_23CS10005_Q1/: index.html
docs/labs/a2/: index.html
docs/labs/a3/: index.html
docs/labs/a3/assignment3/: index.html
docs/labs/a3/lists_in_cpp/: index.html
docs/labs/a3/simple_unit_test/: index.html
docs/labs/a4/: index.html
docs/labs/a4/assignment4/: index.html
docs/labs/a4/problem1/: index.html
docs/labs/a4/problem2/: index.html
docs/labs/a5/: index.html
docs/labs/a5/monty_hall/: index.html
docs/labs/a5/my_string/: index.html
docs/labs/a5/problem1/: index.html
docs/src/: index.html
docs/templates/: index.html
docs/theory/: index.html
include/: index.html
labs/: index.html
labs/a1/: index.html  users.txt
labs/a1/A0_23CS10005_Q1/: index.html
labs/a2/: 23CS10005_week1_q1.cpp  23CS10005_week1_q2.cpp  index.html  new users.txt  q1  q2
labs/a3/: index.html
labs/a3/assignment3/: index.html  list.cpp  list.h  test_list.cpp
labs/a3/lists_in_cpp/: index.html  list  list.cpp  list.h  test  test_list.cpp
labs/a3/simple_unit_test/: a.out  index.html  main.cpp  operations.h  test  test.cpp
labs/a4/: index.html
labs/a4/assignment4/: index.html
labs/a4/problem1/: coverage.info  index.html
labs/a4/problem1/src/: index.html  main.cpp
labs/a4/problem2/: coverage.info  index.html
labs/a4/problem2/src/: index.html  main.cpp
labs/a5/: index.html
labs/a5/monty_hall/: CMakeLists.txt  commandlist.txt  index.html  main.cpp
labs/a5/my_string/: CMakeLists.txt  commandlist.txt  index.html
labs/a5/my_string/include/: MyString.h  index.html
labs/a5/my_string/src/: MyString.cpp  index.html
labs/a5/my_string/tests/: MyStringTest.cpp  index.html
labs/a5/problem1/: CMakeLists.txt  commandlist.txt  index.html  main.cpp
labs/a6/: A523CS10005.ipynb  Basic Programming in Python_ Attempt review _ CwS @ CSE, IIT KGP.html
labs/a6/Basic Programming in Python_ Attempt review _ CwS @ CSE, IIT KGP_files/: showClock.css  styles.php
src/: directory_scanner.cpp  directory_scanner.hpp  html_generator.cpp  html_generator.hpp  index.html  main.cpp
src/templates/: footer.html  header.html  index.html  styles.css
templates/: footer.html  header.html  index.html  style.css
theory/: index.html
(+19 files in other folders)
